# autqec

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  XY_dualities.py  ZX_dualities.py  ZX_dualities_n5k1d3.pkl  ZY_dualities.py  automorphisms.py  auts_n5k1d3.pkl  code_embedding.py  h_gates.py  hadamards.py  logical_subgroups.py  magma_interface.py  old_XY_dualities.py  old_ZX_dualities.py  old_automorphisms.py  pyproject.toml  setup.py  test_new.ipynb  test_old.ipynb  test_pauli_correction.py  try.py
autqec/: XY_dualities.py  ZX_dualities.py  ZY_dualities.py  automorphisms.py  code_embedding.py  graph_auts.py  logical_subgroups.py  magma_interface.py
codetables/: analysis.ipynb  find_auts.py  find_auts_w_intersect.py  logical_gates_analysis.ipynb  logical_subgroups.py  logicals_gates.py  order_time_analysis.ipynb  run.py  transversal_gates.py  transversal_gates.txt
examples/: DEMO_w_MAGMA_online.ipynb  XY_dualities_n4k2d2.pkl  XY_dualities_n5k1d3.pkl  XY_dualities_n7k1d3.pkl  ZX_dualities_n4k2d2.pkl  ZX_dualities_n7k1d3.pkl  [[10,2]].ipynb  [[14,2,5]].ipynb  [[17,1,7]].ipynb  [[28,2,10]].ipynb  [[4,2,2]].ipynb  [[4,3,1]].ipynb  [[5,1,3]].ipynb  [[7,1,3]].ipynb  add_parent_dir.py  auts_n10k2d?.pkl  auts_n14k2d?.pkl  auts_n15k1d?.pkl  auts_n17k1d?.pkl  auts_n4k3d?.pkl  auts_n5k1d3.pkl  auts_n7k1d3.pkl  auts_n8k3d?.pkl  codes_from_codetables.ipynb  graph_auts.ipynb  logical_phases-Copy1.ipynb  logical_phases.ipynb  symp_mats_n4k2d2.pkl  test_new.ipynb  test_old.ipynb
rref_mark/: try.py
tests/: clifford_subgroup_membership.py  test_ZX_dualities.py  (+5 more)
utils/: qec.py  (+6 more)
(+4778 files in other folders)
