[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autqec"
version = "1.0.0"
description = "Tools for finding logical Clifford gates of QEC stabilizer codes from code automorphisms."
license = "GNU General Public License v3.0, 29 June 2007"
authors = ["Hasan Sayginel <hasan.sayginel.17@ucl.ac.uk>"]
readme = "README.md" 
repository = "https://github.com/hsayginel/autqec"
keywords = [
  "quantum computing",
  "quantum error correction",
  "quantum low-density parity check codes",
  "LDPC",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent", 
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
include = ["autqec/py.typed"]

[tool.poetry.dependencies]
python = '^3.11'
numpy = '^1.26.2'
pytest = '^8.3.1'
qiskit = '^1.1.1'
matplotlib = '^3.9.1'
pylatexenc = '^2.10'
numba = '^0.60.0'
igraph = '^0.11.8'